# Lichen

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Lichen.code-workspace  README.md
Lichen/: CMakeLists.txt
LichenEngine/: CMakeLists.txt
LichenEngine/src/: Lichen.h  Test.cpp  Test.h  lchpch.h
LichenEngine/src/Lichen/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.cpp  Window.h
LichenEngine/src/Lichen/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sandbox/: CMakeLists.txt
Sandbox/src/: SandApp.cpp
scripts/: run.bat  run.sh  run_completion.sh
